URLEncoder.encode() compatibility issue.